SERVER-112772 Disable $match pushdown past $group in presence of $expr (#46351)

Co-authored-by: Andi Wang
Co-authored-by: Andi Wang <5522362+wangandi@users.noreply.github.com>
GitOrigin-RevId: 3e387e1d3751389edcd2f224779ff7689b77b4ed